test/tests/compiler/18_structures/invalid_types/scalar_required/subscript_struct.plx
type struc s(    a: i32    )

pub fn main(none) i32 {
    x: struc s = $(true)
    return x[0] #  can only subscript pointers, not structures
}
